# sfs-python

./: .gitignore  .travis.yml  CONTRIBUTING.rst  LICENSE  MANIFEST.in  NEWS.rst  README.md  README.rst  examples  pyproject.toml  readthedocs.yml  setup.py  simple_SFS.py
.binder/: postBuild  requirements.txt
.github/workflows/: test.yml
SFS/: __init__.py  drivingfunction.py  source.py
binder/: README  postBuild  requirements.txt
data/arrays/: example_array_4LS_2D.csv  example_array_6LS_3D.txt  university_rostock.csv  wfs_university_rostock_2015.csv  wfs_university_rostock_2018.csv
doc/: Makefile  README  api.rst  arrays.rst  conf.py  example-python-scripts.rst  examples.rst  frequency-domain.rst  frequency_domain.rst  index.rst  installation.rst  make.bat  math-definitions.rst  math_definitions.py  matplotlibrc  plotting.rst  readthedocs-environment.yml  references.bib  references.rst  requirements.txt  sources.rst  time-domain.rst  usage.rst  utilities.rst  version-history.rst
doc/_static/: README
doc/_template/: layout.html
doc/examples/: animations-pulsating-sphere.ipynb  animations_pulsating_sphere.py  horizontal_plane_arrays.py  index.rst  ipython_kernel_config.py  mirror-image-source-model.ipynb  modal-room-acoustics.ipynb  plot_particle_density.py  pulsating-sphere-displacement.py  run_all.py  sound-field-synthesis.ipynb  sound_field_synthesis.py  soundfigures.py  time_domain.py  time_domain_nfchoa.py  wfs-animation.ipynb  wfs-referencing.ipynb
examples/: examples_horizontal_plane_arrays.py  examples_linear_array.py  horizontal_plane_arrays.py  make_movie.py  mirror_image_source_model.ipynb  mirror_image_source_model.py  modal_room_acoustics.py  plot_particle_density.py  plot_source_velocity.py  sound_field_synthesis.py  soundfigures.py  time_domain.py
sfs/: __init__.py  _version.py  array.py  defs.py  drivingfunction.py  plot.py  plot2d.py  plot3d.py  source.py  synthesized.py  tapering.py  util.py
sfs/broadband/: __init__.py  nfchoa.py  wfs.py  (+1 more)
tests/: test_array.py  test_util.py
(+41 files in other folders)
